# RayTracer

./: CMakeLists.txt
assets/fonts/: Amiga1
src/: app.cpp  app.h  main.cpp
src/rendering/: camera.cpp  camera.h  consts.h  objects.h  renderer.cpp  renderer.h  scene.cpp  scene.h  shader.cpp  shader.h  shader_utility.cpp  shader_utility.h  texture.h
src/shaders/: ray_tracer.comp  screen_frag.frag
